added some title and alts to images to satisfy the w3c standards

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title></title>
+	<title>Fatima's portfolio </title>
+	<meta charset="utf-8">
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<style type="text/css">
+	<style>
 	#header {
  position: fixed;
   right: 0;
@@ -146,7 +147,7 @@ opacity:0.5;
 			<div  class="project-tile" >
 				<p> Documentation page</p>
 				<div class="box">
-				<a href="https://fa6oomawad.github.io/documantation/"><img src="img/doc.png"></a>
+				<a href="https://fa6oomawad.github.io/documantation/"><img src="img/doc.png" alt="website's screenshot" ></a>
 </div>
 			</div>
 		</div>
@@ -156,7 +157,7 @@ opacity:0.5;
 				<p> Inspire</p>
 				<div class="box">
 
-				<a href=""><img src="img/inspire.png"></a></div>
+				<a href=""><img src="img/inspire.png" alt="website's screenshot"></a></div>
 			</div>
 		</div>
 	</div>
@@ -170,7 +171,7 @@ opacity:0.5;
 				<p> Product Landing</p>
 				<div class="box">
 
-				<a href="https://fa6oomawad.github.io/Apple-product/"><img src="img/product.png"></a>
+				<a href="https://fa6oomawad.github.io/Apple-product/"><img src="img/product.png" alt="website's screenshot"></a>
 </div>
 			</div>
 		</div>
@@ -180,7 +181,7 @@ opacity:0.5;
 				<p> Twitter's survey form</p>
 				<div class="box">
 
-				<a href="https://fa6oomawad.github.io/surveyform/"><img src="img/survey.png"></a>
+				<a href="https://fa6oomawad.github.io/surveyform/"><img src="img/survey.png" alt="website's screenshot"></a>
 		</div>	</div>  
 		</div>
 	</div>
@@ -194,7 +195,7 @@ opacity:0.5;
 				<p> Qoute Machine</p>
 				<div class="box">
 
-				<a href="https://fa6oomawad.github.io/qouteMachine/"><img src="img/qoutes.png"></a>
+				<a href="https://fa6oomawad.github.io/qouteMachine/"><img src="img/qoutes.png" alt="website's screenshot"></a>
 </div>
 			</div>
 		</div>
