added title and some alts for imgs to be on w3c standards

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ opacity:0.5;
 
 <div class="container-fluid" id="welcome-section">
 	<h1>Hi,I'm Fatima :) </h1> 
-		<p> on my way to become The amazing web developer ;) </p>
+		<p> on my way to become The amazing web developer . </p>
 
 </div>
 
