--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ opacity:0.5;
   </a>
    <div class="collapse navbar-collapse " id="navbarNav">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="#">Home </a>
       </li>
       <li class="nav-item">
@@ -220,6 +220,16 @@ opacity:0.5;
 	</div>
 </footer>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+<script>
+var branch=$(".nav-link");
+branch.each(function (index,element){
+var e= element[i];
+var $e=$("e");
+$e.css("color","purple");
+});
+
+</script>
 </body>
 </html>      
