to color the active part of the page

--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@ opacity:0.5;
 <script>
 var branch=$(".nav-link");
 branch.on("click",function(event){
-	branch.css("color","red")
+	$(this).css("color","red");
+	console.log(event.target);
 })
 </script>
 </body>
