links added to projects

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ opacity:0.5;
 			<div  class="project-tile" >
 				<p> Calculator</p>
 				<div class="box">
-				<a href="https://fa6oomawad.github.io/documantation/"><img src="img/calculator.PNG" alt="website's screenshot" ></a>
+				<a href="https://fa6oomawad.github.io/calculator/"><img src="img/calculator.PNG" alt="website's screenshot" ></a>
 </div>
 			</div>
 		</div>
@@ -160,7 +160,7 @@ opacity:0.5;
 				<p> Memory cards</p>
 				<div class="box">
 
-				<a href=""><img src="img/memory.PNG" alt="website's screenshot"></a></div>
+				<a href="https://fa6oomawad.github.io/memorycards/"><img src="img/memory.PNG" alt="website's screenshot"></a></div>
 			</div>
 		</div>
 	</div>
@@ -230,7 +230,7 @@ opacity:0.5;
 				<p>Slide show</p>
 				<div class="box">
 
-				<a href="https://fa6oomawad.github.io/qouteMachine/"><img src="img/slides.PNG" alt="website's screenshot"></a>
+				<a href="https://fa6oomawad.github.io/slideshow/"><img src="img/slides.PNG" alt="website's screenshot"></a>
 </div>
 			</div>
 		</div>
