new project added

--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@ opacity:0.5;
 
 		<div  class="col-lg-6">
 			<div class="project-tile">
-				<p> Inspire</p>
+				<p> Drums kit</p>
 				<div class="box">
 
-				<a href=""><img src="img/inspire.png" alt="website's screenshot"></a></div>
+				<a href="https://fa6oomawad.github.io/Drums-box/"><img src="img/drum.png" alt="website's screenshot"></a></div>
 			</div>
 		</div>
 	</div>
