--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@ opacity:0.5;
 			<div  class="col-lg-6">
 			
 					<div  class="project-tile" >
-						<p> Product Landing</p>
+						<p>Airlines</p>
 						<div class="box">
 		
-						<a href="https://fa6oomawad.github.io/Apple-product/"><img src="img/product.png" alt="website's screenshot"></a>
+						<a href="https://fa6oomawad.github.io/Airlines/"><img src="img/airlines.PNG" alt="website's screenshot"></a>
 		</div>
 					</div>
 				</div>
