--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<style>
+		body{
+			position:relative;
+			margin: 0px;
+			padding:0px;
+			
+
+		}
 	#header {
  position: fixed;
   right: 0;
@@ -76,12 +83,17 @@ color: grey;
 		.box:hover{
 opacity:0.5;
 					}
+
 		#footer {
 			background-color: grey;
-			width: 100%;
-			height: 100%;
-	padding: 3%;
-	margin-top: 100px;
+  width: 100%;
+ padding-top: 3%;
+ padding-left:3%;
+ 
+ margin-top: 10%;
+
+
+	
 		}
 
 	.actively {
@@ -90,12 +102,16 @@ opacity:0.5;
 	}
 .fa {
 	padding: 50px;
-	font-size: 30px;
-	color: white;
+	font-size: 35px;
+	color: black;
 }
 .fa:hover {
 	color: #48c9c5;
 	text-decoration: none;
+}
+#mee{
+	margin-top:30px;
+	color:black;
 }
 
 @media (max-width: 600px){
@@ -246,11 +262,12 @@ opacity:0.5;
 
 </div>
 
-<footer class="container-fluid text-center" id="footer">
+<footer  id="footer">
 	<div class="row">
 				<div class="col-sm-4">
+					<div id="mee">
 								<h3>Contact Me </h3>
-<p style="font-weight:bold;"> you can reach me in one of these social media accounts</p>
+<p style="font-weight:bold;"> you can reach me in one of these social media accounts</p></div>
 </div>
 
 		<div class="col-sm-4">
