fixed some images

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ opacity:0.5;
 						<p> Qoute Machine</p>
 						<div class="box">
 		
-						<a href="https://fa6oomawad.github.io/qouteMachine/"><img src="img/qoutes.png" alt="website's screenshot"></a>
+						<a href="https://fa6oomawad.github.io/qouteMachine/"><img src="img/qoute.png" alt="website's screenshot"></a>
 		</div>
 					</div>
 				</div>
@@ -253,7 +253,7 @@ opacity:0.5;
 				<div  class="project-tile" >
 					<p> Documentation page</p>
 					<div class="box">
-					<a href="https://fa6oomawad.github.io/documantation/"><img src="img/doc.png" alt="website's screenshot" ></a>
+					<a href="https://fa6oomawad.github.io/documantation/"><img src="img/document.PNG" alt="website's screenshot" ></a>
 	</div>
 				</div>
 			</div>
