--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@ opacity:0.5;
 
 		<div  class="col-lg-6">
 			<div class="project-tile">
-				<p> Twitter's survey form</p>
+				<p> Todo List</p>
 				<div class="box">
 
-				<a href="https://fa6oomawad.github.io/surveyform/"><img src="img/survey.png" alt="website's screenshot"></a>
+				<a href="https://fa6oomawad.github.io/Todo-list/"><img src="img/todo.PNG" alt="website's screenshot"></a>
 		</div>	</div>  
 		</div>
 	</div>
