--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ opacity:0.5;
 		<div  class="project-tile" >
 			<p> survey Form</p>
 			<div class="box">
-			<a href="https://fa6oomawad.github.io/survey/"><img src="img/survey.png" alt="website's screenshot" ></a>
+			<a href="https://fa6oomawad.github.io/surveyform/"><img src="img/survey.png" alt="website's screenshot" ></a>
 </div>
 		</div>
 	</div>
