--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@ opacity:0.5;
 			<div  class="col-lg-6">
 			
 					<div  class="project-tile" >
-						<p> Qoute Machine</p>
+						<p> Movies</p>
 						<div class="box">
 		
-						<a href="https://fa6oomawad.github.io/qouteMachine/"><img src="img/qoute.png" alt="website's screenshot"></a>
+						<a href="https://fa6oomawad.github.io/movies/#/Movies"><img src="img/movies.png" alt="website's screenshot"></a>
 		</div>
 					</div>
 				</div>
@@ -285,6 +285,8 @@ opacity:0.5;
 	</div>
 
 </div>
+
+
 
 </div>
 </div>
