--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ opacity:0.5;
 						<p> Movies</p>
 						<div class="box">
 		
-						<a href="https://fa6oomawad.github.io/movies/#/Movies"><img src="img/movies.png" alt="website's screenshot"></a>
+						<a href="https://fa6oomawad.github.io/movies/#/Movies"><img src="img/movies.PNG" alt="website's screenshot"></a>
 		</div>
 					</div>
 				</div>
