boxe description for each project

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ background-color: #bcc6c6;
 			height:300px;
 			margin-top: 50px;
 			margin-bottom: 50px;
+			
 
 		}
 		.box{
@@ -63,12 +64,35 @@ background-color: #bcc6c6;
 			border-width: 8px;
 			opacity:1;
 			border-radius: 5px;
+			position:relative;
+			
+		
 					}
 					
 		 .box a img{
 		 	width: 100%;
 		 	height:100%;
 			 object-fit: fill;
+		}
+
+		.smallbox{
+			width: 485px;
+			height:285px;
+			position:absolute;
+			top:0;
+			right:0;
+			left:0;
+			color:white;
+			background-color: rgba(0, 0, 0, 0.719);
+			border-radius: 5px;
+
+
+		}
+		.smallbox span{
+			position: absolute;
+			top:40%;
+			text-align: center;
+			letter-spacing: 1px;
 		}
 
 		 .project-tile p {
@@ -169,7 +193,12 @@ opacity:0.5;
 			<div  class="project-tile" >
 				<p> Calculator</p>
 				<div class="box">
-				<a href="https://fa6oomawad.github.io/calculator/"><img src="img/calculator.PNG" alt="website's screenshot" ></a>
+
+				<a href="https://fa6oomawad.github.io/calculator/">
+					<img src="img/calculator.PNG" alt="website's screenshot" ></a>
+<div class="smallbox"><span >Simple calculator where you can perform your daily mathmatical operations </span>
+</div>
+
 </div>
 			</div>
 		</div>
@@ -179,7 +208,10 @@ opacity:0.5;
 				<p> Memory cards</p>
 				<div class="box">
 
-				<a href="https://fa6oomawad.github.io/memorycards/"><img src="img/memory.PNG" alt="website's screenshot"></a></div>
+				<a href="https://fa6oomawad.github.io/memorycards/"><img src="img/memory.PNG" alt="website's screenshot"></a>
+				<div class="smallbox"><span >Test your brain with a cool cards game where you need to match 2 pictures together to get a point in return  </span>
+				</div>
+			</div>
 			</div>
 		</div>
 	</div>
@@ -194,6 +226,8 @@ opacity:0.5;
 						<div class="box">
 		
 						<a href="https://fa6oomawad.github.io/slideshow/"><img src="img/slides.PNG" alt="website's screenshot"></a>
+						<div class="smallbox"><span > My favorite comedy shows slide show, where you can change the slide show based on what is on the menu on the top  </span>
+						</div>
 		</div>
 					</div>
 				</div>
@@ -204,7 +238,10 @@ opacity:0.5;
 				<p> Drums kit</p>
 				<div class="box">
 
-				<a href="https://fa6oomawad.github.io/Drums-box/"><img src="img/drum.png" alt="website's screenshot"></a></div>
+				<a href="https://fa6oomawad.github.io/Drums-box/"><img src="img/drum.png" alt="website's screenshot"></a>
+				<div class="smallbox"><span >Make some beat by playing with this drum by either clicking on boxes or use your keyboard letters that matches these boxes and enjoy ;) </span>
+				</div>
+			</div>
 			</div>
 		</div>
 	</div>
@@ -219,6 +256,8 @@ opacity:0.5;
 						<div class="box">
 		
 						<a href="https://fa6oomawad.github.io/movies/#/Movies"><img src="img/movies.PNG" alt="website's screenshot"></a>
+						<div class="smallbox"><span >wanna know whats popular or top rated movies currently! Movies website show you that with a descrption and information about each movie you choose. </span>
+						</div>
 		</div>
 					</div>
 				</div>
@@ -230,6 +269,8 @@ opacity:0.5;
 				<div class="box">
 
 				<a href="https://fa6oomawad.github.io/Todo-list/"><img src="img/todo.PNG" alt="website's screenshot"></a>
+				<div class="smallbox"><span >Organize your day by listing what you need to accomplish, check it by clicking on it if its done or simply delete it . </span>
+				</div>
 		</div>	</div>  
 		</div>
 	</div>
@@ -245,6 +286,8 @@ opacity:0.5;
 						<div class="box">
 		
 						<a href="https://fa6oomawad.github.io/Airlines/"><img src="img/airlines.PNG" alt="website's screenshot"></a>
+						<div class="smallbox"><span >Simple design for airlines website where you choose your destination and in which date  </span>
+						</div>
 		</div>
 					</div>
 				</div>
@@ -254,6 +297,8 @@ opacity:0.5;
 					<p> Documentation page</p>
 					<div class="box">
 					<a href="https://fa6oomawad.github.io/documantation/"><img src="img/document.PNG" alt="website's screenshot" ></a>
+					<div class="smallbox"><span >Know more about css framework (bootstrap) in this documentation</span>
+					</div>
 	</div>
 				</div>
 			</div>
@@ -271,6 +316,8 @@ opacity:0.5;
 				<div class="box">
 
 				<a href="https://fa6oomawad.github.io/Weather/"><img src="img/weather.png" alt="website's screenshot"></a>
+				<div class="smallbox"><span >Today's weather and your location by just a click with you allowing location feature on your browser. </span>
+				</div>
 </div>
 			</div>
 		</div>
@@ -280,6 +327,8 @@ opacity:0.5;
 			<p> survey Form</p>
 			<div class="box">
 			<a href="https://fa6oomawad.github.io/surveyform/"><img src="img/survey.png" alt="website's screenshot" ></a>
+			<div class="smallbox"><span >Simple design for twitter questionnaire </span>
+			</div>
 </div>
 		</div>
 	</div>
@@ -328,16 +377,17 @@ $(allitems).removeClass("actively");
 		
 
 	}
-	
-	
 
-	
-		
-
-
-	
 
 });
+
+$('.project-tile img').on('mouseover',function(e){
+	console.log(e.target);
+	
+});
+
+const smallBoxes=document.querySelectorAll('.smallbox');
+
 
 </script>
 </body>
