--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
  position: fixed;
   right: 0;
   left:0;
-       z-index: 1;
+	   z-index: 1;
+	   box-shadow: 0 10px 7px rgba(0, 0, 0, 0.26);
 	}
 		
 		#welcome-section {
@@ -85,6 +86,8 @@ background-color: #bcc6c6;
 			color:white;
 			background-color: rgba(0, 0, 0, 0.719);
 			border-radius: 5px;
+			display: none;
+			transition: 2s all ease-in;
 
 
 		}
@@ -104,9 +107,7 @@ color: grey;
 			font-size: 20px;
 		}
 
-		.box:hover{
-opacity:0.5;
-					}
+		
 
 		#footer {
 			background-color: grey;
@@ -256,7 +257,7 @@ opacity:0.5;
 						<div class="box">
 		
 						<a href="https://fa6oomawad.github.io/movies/#/Movies"><img src="img/movies.PNG" alt="website's screenshot"></a>
-						<div class="smallbox"><span >wanna know whats popular or top rated movies currently! Movies website show you that with a descrption and information about each movie you choose. </span>
+						<div class="smallbox"><span >wanna know whats popular or top rated movies currently! Movies website show you that with a descirption and information about each movie you choose. </span>
 						</div>
 		</div>
 					</div>
@@ -381,12 +382,18 @@ $(allitems).removeClass("actively");
 
 });
 
-$('.project-tile img').on('mouseover',function(e){
-	console.log(e.target);
-	
-});
 
-const smallBoxes=document.querySelectorAll('.smallbox');
+const boxes=document.querySelectorAll('.box');
+function showSmallBox(){
+	const smallbox=this.querySelector('.smallbox');
+	smallbox.style.display='block';
+}
+function hideSmallBox(){
+	const smallbox=this.querySelector('.smallbox');
+	smallbox.style.display='none';
+}
+boxes.forEach((box)=>box.addEventListener('mouseover',showSmallBox));
+boxes.forEach((box)=>box.addEventListener('mouseout',hideSmallBox));
 
 
 </script>
