--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<style>
+		@font-face {
+font-family: youth;
+src:url('youth.ttf');
+		}
 		body{
 			position:relative;
 			margin: 0px;
@@ -33,12 +37,16 @@ display: flex;
 		}
 		#welcome-section h1 {
 color: white;
-font-family: Bookman;
+font-size:90px;
+font-family: 'youth';
+text-shadow: 2px 2px rgba(0, 0, 0, 0.514);
 		}
 		#welcome-section p {
-		padding-top: 60px;
-		padding-left:60px;
-		color: grey;
+		padding-top: 200px;
+		padding-left:40px;
+		color: rgb(85, 85, 85);
+		font-family: 'youth';
+font-size:40px;
 		}
 		#navbar {
 background-color: #bcc6c6;
@@ -46,14 +54,15 @@ background-color: #bcc6c6;
 		#projects h1 {
 			padding-top:100px;
 			color:grey;
-			font-family: Georgia;
-			font-weight: bold;
+			font-family: 'youth';
+			font-size:70px;
 		}
 		.project-tile {
 			width: 500px;
 			height:300px;
 			margin-top: 50px;
 			margin-bottom: 50px;
+		
 			
 
 		}
@@ -99,12 +108,11 @@ background-color: #bcc6c6;
 		}
 
 		 .project-tile p {
-			font-family: Palatino;
-color: grey;
+			font-family: 'youth';
+			font-size:50px;
+			color: grey;
 			padding-top: 20px;
 			text-align: center;
-			font-weight: bold;
-			font-size: 20px;
 		}
 
 		
@@ -135,7 +143,7 @@ color: grey;
 	text-decoration: none;
 }
 #mee{
-	margin-top:30px;
+	margin-top:10px;
 	color:black;
 }
 
@@ -178,7 +186,7 @@ color: grey;
 </header>
 
 <div class="container-fluid" id="welcome-section">
-	<h1>Hi,I'm Fatima :) </h1> 
+	<h1>Hi, I'm Fatima :) </h1> 
 		<p> on my way to become The amazing web developer. </p>
 
 </div>
@@ -346,8 +354,9 @@ color: grey;
 	<div class="row">
 				<div class="col-sm-4">
 					<div id="mee">
-								<h3>Contact Me </h3>
-<p style="font-weight:bold;"> you can reach me in one of these social media accounts</p></div>
+								<h3 style="	font-family: 'youth';
+								font-size:60px;">Contact Me </h3>
+<p style="font-weight:bold;font-family: 'youth';font-size:30px;"> you can reach me in one of these social media accounts</p></div>
 </div>
 
 		<div class="col-sm-4">
