anchor element edited

--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@ background-color: #bcc6c6;
 				<div class="box">
 
 				<a href="https://fa6oomawad.github.io/calculator/">
-					<img src="img/calculator.PNG" alt="website's screenshot" ></a>
+					<img src="img/calculator.PNG" alt="website's screenshot" >
 <div class="smallbox"><span >Simple calculator where you can perform your daily mathmatical operations </span>
 </div>
-
+</a>
 </div>
 			</div>
 		</div>
@@ -217,9 +217,10 @@ background-color: #bcc6c6;
 				<p> Memory cards</p>
 				<div class="box">
 
-				<a href="https://fa6oomawad.github.io/memorycards/"><img src="img/memory.PNG" alt="website's screenshot"></a>
+				<a href="https://fa6oomawad.github.io/memorycards/"><img src="img/memory.PNG" alt="website's screenshot">
 				<div class="smallbox"><span >Test your brain with a cool cards game where you need to match 2 pictures together to get a point in return  </span>
 				</div>
+			</a>
 			</div>
 			</div>
 		</div>
@@ -234,9 +235,10 @@ background-color: #bcc6c6;
 						<p>Slide show</p>
 						<div class="box">
 		
-						<a href="https://fa6oomawad.github.io/slideshow/"><img src="img/slides.PNG" alt="website's screenshot"></a>
+						<a href="https://fa6oomawad.github.io/slideshow/"><img src="img/slides.PNG" alt="website's screenshot">
 						<div class="smallbox"><span > My favorite comedy shows slide show, where you can change the slide show based on what is on the menu on the top  </span>
 						</div>
+					</a>
 		</div>
 					</div>
 				</div>
@@ -247,9 +249,10 @@ background-color: #bcc6c6;
 				<p> Drums kit</p>
 				<div class="box">
 
-				<a href="https://fa6oomawad.github.io/Drums-box/"><img src="img/drum.png" alt="website's screenshot"></a>
+				<a href="https://fa6oomawad.github.io/Drums-box/"><img src="img/drum.png" alt="website's screenshot">
 				<div class="smallbox"><span >Make some beat by playing with this drum by either clicking on boxes or use your keyboard letters that matches these boxes and enjoy ;) </span>
 				</div>
+			</a>
 			</div>
 			</div>
 		</div>
@@ -264,9 +267,10 @@ background-color: #bcc6c6;
 						<p> Movies</p>
 						<div class="box">
 		
-						<a href="https://fa6oomawad.github.io/movies/#/Movies"><img src="img/movies.PNG" alt="website's screenshot"></a>
+						<a href="https://fa6oomawad.github.io/movies/#/Movies"><img src="img/movies.PNG" alt="website's screenshot">
 						<div class="smallbox"><span >wanna know whats popular or top rated movies currently! Movies website show you that with a descirption and information about each movie you choose. </span>
 						</div>
+					</a>
 		</div>
 					</div>
 				</div>
@@ -277,9 +281,10 @@ background-color: #bcc6c6;
 				<p> Todo List</p>
 				<div class="box">
 
-				<a href="https://fa6oomawad.github.io/Todo-list/"><img src="img/todo.PNG" alt="website's screenshot"></a>
+				<a href="https://fa6oomawad.github.io/Todo-list/"><img src="img/todo.PNG" alt="website's screenshot">
 				<div class="smallbox"><span >Organize your day by listing what you need to accomplish, check it by clicking on it if its done or simply delete it . </span>
 				</div>
+			</a>
 		</div>	</div>  
 		</div>
 	</div>
@@ -294,9 +299,10 @@ background-color: #bcc6c6;
 						<p>Airlines</p>
 						<div class="box">
 		
-						<a href="https://fa6oomawad.github.io/Airlines/"><img src="img/airlines.PNG" alt="website's screenshot"></a>
+						<a href="https://fa6oomawad.github.io/Airlines/"><img src="img/airlines.PNG" alt="website's screenshot">
 						<div class="smallbox"><span >Simple design for airlines website where you choose your destination and in which date  </span>
 						</div>
+					</a>
 		</div>
 					</div>
 				</div>
@@ -305,9 +311,10 @@ background-color: #bcc6c6;
 				<div  class="project-tile" >
 					<p> Documentation page</p>
 					<div class="box">
-					<a href="https://fa6oomawad.github.io/documantation/"><img src="img/document.PNG" alt="website's screenshot" ></a>
+					<a href="https://fa6oomawad.github.io/documantation/"><img src="img/document.PNG" alt="website's screenshot" >
 					<div class="smallbox"><span >Know more about css framework (bootstrap) in this documentation</span>
 					</div>
+				</a>
 	</div>
 				</div>
 			</div>
@@ -324,9 +331,10 @@ background-color: #bcc6c6;
 				<p>Your Weather</p>
 				<div class="box">
 
-				<a href="https://fa6oomawad.github.io/Weather/"><img src="img/weather.png" alt="website's screenshot"></a>
+				<a href="https://fa6oomawad.github.io/Weather/"><img src="img/weather.png" alt="website's screenshot">
 				<div class="smallbox"><span >Today's weather and your location by just a click with you allowing location feature on your browser. </span>
 				</div>
+			</a>
 </div>
 			</div>
 		</div>
@@ -335,9 +343,10 @@ background-color: #bcc6c6;
 		<div  class="project-tile" >
 			<p> survey Form</p>
 			<div class="box">
-			<a href="https://fa6oomawad.github.io/surveyform/"><img src="img/survey.png" alt="website's screenshot" ></a>
+			<a href="https://fa6oomawad.github.io/surveyform/"><img src="img/survey.png" alt="website's screenshot" >
 			<div class="smallbox"><span >Simple design for twitter questionnaire </span>
 			</div>
+		</a>
 </div>
 		</div>
 	</div>
