replaced an old project with a new one

--- a/index.html
+++ b/index.html
@@ -357,11 +357,11 @@ border:1px solid rgba(255, 255, 255, 0.479);
 <div  class="col-lg-6">
 	
 		<div  class="project-tile" >
-			<p> survey Form</p>
+			<p>Meme Generator</p>
 			<div class="box">
-			<img src="img/survey.png" alt="website's screenshot" >
-			<div class="smallbox"><span >Simple design for twitter questionnaire </span>
-				<a href="https://fa6oomawad.github.io/surveyform/"><button class='tryButton'>Try it </button></a>
+			<img src="img/memes.PNG" alt="website's screenshot" >
+			<div class="smallbox"><span>create your own meme by writing on the top and bottom of the picture of your choice and then download it if you want to </span>
+				<a href="https://fa6oomawad.github.io/memeGenerator/"><button class='tryButton'>Try it </button></a>
 			</div>
 		
 </div>
