changed some fonts

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 	<style>
 		@font-face {
-font-family: youth;
-src:url('youth.ttf');
+font-family: Allcan;
+src:url('Allcan.otf');
 		}
 		body{
 			position:relative;
@@ -37,16 +37,16 @@ display: flex;
 		}
 		#welcome-section h1 {
 color: white;
-font-size:90px;
-font-family: 'youth';
+font-size:80px;
+
 text-shadow: 2px 2px rgba(0, 0, 0, 0.514);
 		}
 		#welcome-section p {
 		padding-top: 200px;
 		padding-left:40px;
 		color: rgb(85, 85, 85);
-		font-family: 'youth';
-font-size:40px;
+		font-weight:bold;
+font-size:20px;
 		}
 		#navbar {
 background-color: #bcc6c6;
@@ -54,8 +54,8 @@ background-color: #bcc6c6;
 		#projects h1 {
 			padding-top:100px;
 			color:grey;
-			font-family: 'youth';
 			font-size:70px;
+			font-weight: bold;
 		}
 		.project-tile {
 			width: 500px;
@@ -108,8 +108,8 @@ background-color: #bcc6c6;
 		}
 
 		 .project-tile p {
-			font-family: 'youth';
-			font-size:50px;
+			font-size:40px;
+			font-weight:bold;
 			color: grey;
 			padding-top: 20px;
 			text-align: center;
@@ -129,6 +129,12 @@ border:1px solid rgba(255, 255, 255, 0.479);
 }
 .tryButton:hover{
 	background-color: rgb(73, 73, 73);
+}
+.lightOn{
+	cursor: pointer;
+}
+.lightOn:hover{
+	color:#48c9c5;
 }
 
 		#footer {
@@ -200,7 +206,7 @@ border:1px solid rgba(255, 255, 255, 0.479);
 </header>
 
 <div class="container-fluid" id="welcome-section">
-	<h1>Hi, I'm Fatima :) </h1> 
+	<h1>Hi, I'M FATIMA :) </h1> 
 		<p> on my way to become The amazing web developer. </p>
 
 </div>
@@ -380,9 +386,9 @@ border:1px solid rgba(255, 255, 255, 0.479);
 	<div class="row">
 				<div class="col-sm-4">
 					<div id="mee">
-								<h3 style="	font-family: 'youth';
-								font-size:60px;">Contact Me </h3>
-<p style="font-weight:bold;font-family: 'youth';font-size:30px;"> you can reach me in one of these social media accounts</p></div>
+								<h3 style="	
+								font-size:50px;" class="lightOn">Contact Me </h3>
+<p style="font-weight:bold;font-size:20px;"> you can reach me in one of these social media accounts</p></div>
 </div>
 
 		<div class="col-sm-4">
