--- a/index.html
+++ b/index.html
@@ -316,12 +316,12 @@ border:1px solid rgba(255, 255, 255, 0.479);
 			<div  class="col-lg-6">
 			
 					<div  class="project-tile" >
-						<p>Airlines</p>
+						<p>Build your home</p>
 						<div class="box">
 		
-						<img src="img/airlines.PNG" alt="website's screenshot">
-						<div class="smallbox"><span >Simple design for airlines website where you choose your destination and in which date  </span>
-							<a href="https://fa6oomawad.github.io/Airlines/"><button class='tryButton'>Try it </button></a>
+						<img src="img/build.PNG" alt="website's screenshot">
+						<div class="smallbox"><span >Simple design for homes construction company website with demonstrating its identity and services  </span>
+							<a href="https://fa6oomawad.github.io/Design1/"><button class='tryButton'>Try it </button></a>
 						</div>
 					
 		</div>
